# personal-planner

./: docker-compose.override.yml
planner-bot/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
planner-bot/planner_bot/: acl.py  bot.py  config.py  cron_jobs.py  dateparse.py  formatters.py  git_ops.py  markdown_files.py  repo_layout.py
planner-bot/planner_bot/handlers/: admin.py  document_capture.py  find_command.py  free_text.py  help_command.py  inbox_capture.py  inbox_commands.py  inbox_list_command.py  photo_capture.py  projects_commands.py  settings_command.py  start.py  (+3 more)
planner-bot/scripts/: create_nocodb_tables.py  init_repo_layout.py  seed_nocodb.py
planner-bot/tests/: E2E_CHECKLIST.md  test_acl.py  test_acl_integration.py  test_admin.py  test_anthropic_client.py  test_bot_post_init.py  test_bot_wiring.py  test_config.py  test_dateparse.py  test_dockerfile_lint.py  test_document_capture.py  test_due_warner.py  test_e2e_smoke.py  test_evening_q1.py  test_find_command.py  test_formatters.py  test_free_text.py  test_git_ops.py  test_handler_archive.py  test_handler_clarify.py  test_handler_inbox_capture.py  test_handler_inbox_commands.py  test_handler_start.py  test_handler_task_create.py  test_help_settings.py  test_inbox_list_command.py  test_llm_classify.py  test_llm_intent.py  test_llm_process.py  test_logging.py  test_markdown_files.py  test_morning_digest.py  test_nocodb_client.py  test_nocodb_repos.py  test_photo_capture.py  test_projects_commands.py  test_repo_layout.py  test_runbook.py  test_seed_nocodb.py  test_skeleton.py  (+8 more)
(+43 files in other folders)
